--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <canvas></canvas>
 
+    <script>
+        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+        ga('create', 'UA-105392568-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    
     <script src="./dat.gui.min.js"></script>
     <script src="./script.js"></script>
     
