--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <canvas></canvas>
 
+    <script>   document.getElementsByTagName('iframe')[0].src += '&' + new Date().getTime(); </script>
     <script>
-        document.getElementsByTagName('iframe')[0].src += '?' + new Date().getTime();
         window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
         ga('create', 'UA-105392568-1', 'auto');
         ga('send', 'pageview');
