--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
     
     <script src="./dat.gui.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./scriptFluid.js"></script>
     
 </body>
 </html>
